# Anki_Tagger

./: .gitignore  README.md  config.yaml  config_loader.py  embed_anki_deck.py  embedding_client.py  make_learning_objectives.py  pyproject.toml  run_pipeline.py  select_cards.py  tag_deck.py
